# discogs-analytics-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
agent/: Dockerfile  README.md  pyproject.toml
agent/docs/: graph.mmd
agent/src/discogs_agent/: __init__.py  api.py  api_admin.py  api_query.py  config.py  health.py
agent/tests/: conftest.py
agent/tests/fixtures/: seed.duckdb  seed_duckdb.py  seed_no_master.duckdb
agent/tests/golden/: _helpers.py  test_canonical_styles.py  test_decade_preference.py  test_empty_result.py  test_golden_house_outliers.py  test_golden_label_diversity.py  test_golden_master_versions.py  test_golden_releases_by_decade.py  test_golden_techno_over_time.py  test_golden_vinyl_vs_cd.py
agent/tests/graph/: test_path_clarification.py  test_path_complex.py  test_path_retries_exhausted.py  test_path_safety_retry.py  test_path_simple.py  test_path_unsupported.py  test_path_validation_retry.py
agent/tests/integration/: test_agent_clarification_query.py  test_agent_complex_query.py  test_agent_resume_thread.py  test_agent_safety_block.py  test_agent_sandbox_failure.py  test_agent_simple_query.py  test_agent_unsupported_query.py  test_distinct_tools_count.py  test_docker_smoke.py  test_duckdb_contract.py  test_health.py  test_master_fact_optional.py  test_persistence_survives_restart.py  test_runs_endpoint_404.py  test_runs_endpoint_admin.py  test_runs_endpoint_default.py  test_runs_endpoint_no_admin_secret.py  test_sandbox_fsize_budget.py  test_threads_endpoint.py  test_threads_endpoint_pagination.py
agent/tests/unit/: test_artifact_store.py  test_carryover_builder.py  test_chart_validator.py  test_chart_validator_oom_rule.py  test_cost_logger.py  test_count_rule_in_prompt.py  test_dataset_schema_reader.py  test_health.py  test_no_etl_imports.py  test_node_tool_allowlist.py  test_query_classifier.py  test_sandbox_executor.py  test_sandbox_signal_mapping.py  test_schema_context.py  test_seed_duckdb_round_trip.py  test_sql_safety_checker.py
etl/: README.md  pyproject.toml
etl/configs/: base.yml
etl/datasets/: .gitignore
etl/src/discogs_etl/: __init__.py  __main__.py  cli.py
etl/tests/fixtures/: artists_sample.xml  artists_sample_raw.xml  masters_sample.xml  masters_sample_bad.xml  masters_sample_raw.xml  releases_sample.xml  releases_sample_bad.xml  releases_sample_raw.xml
etl/tests/integration/: test_masters_artists_pipeline.py  (+3 more)
(+196 files in other folders)
