[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discogs_agent"
version = "0.1.0"
description = "Discogs conversational analytics agent (V1)"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Discogs ETL & Analytics Agent project"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.40",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "duckdb>=1.0",
    "plotly>=5.20",
    "pandas>=2.2",
    "tiktoken>=0.7",
    "sqlparse>=0.5",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.7",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
discogs-agent = "discogs_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
discogs_agent = ["prompts/*.md", "sandbox/*.tmpl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line length governed by formatter

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
files = ["src/discogs_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
