[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discogs_etl"
version = "0.1.0"
description = "Offline ETL from Discogs releases XML to a published DuckDB analytics surface"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "genai-pathway-final-project-yonzo" }]
dependencies = [
    "lxml>=5",
    "pyarrow>=15",
    "duckdb>=1.0",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
discogs-etl = "discogs_etl.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
